# pyrootmemo

./: .buildinfo  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  contribute.html  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  theory.html  workshop.md
_modules/: index.html
_sources/: contribute.rst.txt  index.rst.txt  theory.rst.txt
geometry/: index.html
materials/: index.html  interface.html  roots.html  soil.html  soils.html
models/: index.html
sbee2025/: notebook_0_elephant.ipynb  notebook_1.ipynb  notebook_1_rootarearatio.ipynb  notebook_2_powerlaws.ipynb  notebook_3_reinforcement.ipynb  notebook_4_infiniteslope.ipynb  notebook_biomechanics.ipynb  notebook_elephant.ipynb  notebook_infiniteslope.ipynb  notebook_maintalk.ipynb  notebook_reinforcement.ipynb  notebook_rootarearatio.ipynb  notebook_x_maintalk.ipynb
tests/: Untitled-1.ipynb  fit_powerlaw_example.ipynb  test_constants.py  test_materials.py  test_notebook.ipynb  test_notebook_dram.ipynb  test_notebook_fbm.ipynb  test_notebook_fit_2D_normal_freesd_guess.ipynb  test_notebook_fit_binned.ipynb  test_notebook_fit_new_1D.ipynb  test_notebook_fit_new_2D.ipynb  test_notebook_io.ipynb  test_notebook_powerlaw.ipynb  test_notebook_profile.ipynb  test_notebook_pullout.ipynb  test_notebook_pullout_new.ipynb  test_notebook_rbmw.ipynb  test_notebook_stats_regression.ipynb  test_notebook_utils_fitting.ipynb  test_notebook_waldron.ipynb  test_notebook_waldron1977_gjm.ipynb  test_notebook_wwm.ipynb  test_root_data.csv  (+2 more)
(+94 files in other folders)
