[tool.poetry]
name = "pyrootmemo"
version = "0.1.0"
description = ""
authors = ["anilyildiz <yildiz@mbd.rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
numpy = "^2.1.3"
Pint = "^0.24.4"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scipy = ">1.14"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
