[tool.poetry]
name = "pyrootmemo"
version = "0.1.0"
description = ""
authors = ["anilyildiz <yildiz@mbd.rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
numpy = ">2.1"
Pint = "^0.24.4"
matplotlib = ">3.9"
pandas = ">2.2"
scipy = ">1.14"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
